--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Titan One', cursive;
+  font-size: 10px;
 }
 
 #wrap {
@@ -9,10 +10,43 @@ body {
   justify-content: center;
   align-items: center;
   height: 675px;
+}
 
+#end {
+  width: 500px;
+  height: 300px;
+  background: rgba(255, 255, 255, .6);
+  position: absolute;
+  margin: 0 auto;
+  top: 25%;
+  left: 29%;
+  border-radius: 1em;
+  padding: 1em;
+  text-align: center;
+  font-size: 2.3em;
+  display: none;
 }
 
 #main-canvas {
-  background: rgb(153, 247, 217);
+  background: url(../images/background.jpg);
   cursor: url(blaster.cur) 13 13 , default;
+}
+
+#intro {
+  width: 500px;
+  height: 300px;
+  background: rgba(255, 255, 255, .6);
+  position: absolute;
+  margin: 0 auto;
+  top: 25%;
+  left: 29%;
+  border-radius: 1em;
+  padding: 1em;
+  text-align: center;
+  font-size: 2.3em;
+}
+
+h1 {
+  color: rgb(241, 1, 1);
+  text-shadow: rgb(0, 0, 0) 5px 5px;
 }
