--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: 'Titan One', cursive;
   font-size: 10px;
+  background-color: gray;
 }
 
 #wrapper {
@@ -34,9 +35,9 @@ body {
 
 #main-canvas {
   background: url(../images/background.jpg);
-  /* background-position: center;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: cover; */
+  background-size: cover;
   cursor: url(blaster.cur) 13 13 , default;
 }
 
